2.8 Metaballs update 'NEVER' is not working, seems to *always* update even with NEVER selected #68840

Closed
opened 2019-08-19 20:58:27 +02:00 by todd doehring · 12 comments

System Information
Operating system: win 10
Graphics card: nvidia 1080

Blender Version
Broken: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: 06312c6d2d
Worked: (optional)

Hi all,
I have a complex network of metaballs that I generate using my python script. I would like to (as I do in 2.79) set the UPDATE property to 'NEVER' while I'm generating them; vastly improving speed. This works in 2.79b:

bpy.ops.object.metaball_add(type = 'CAPSULE',rotation = (0,-pi/2,0))
medge = bpy.context.object
medge.data.update_method = 'NEVER'

BUT, it doesn't work in 2.8 or 2.81.

The metaballs seem to be 'stuck' on ALWAYS.
I tried just making a couple generic metaballs and setting to NEVER using the gui, but they still appear!!!

Am i missing something or is there a problem with the NEVER setting in 2.8 ?

Thanks for any suggestions or info. This is kind of mission critical.
Also, I would like to be able to generate 20k or even 100k metaballs. This was not possible in 2.79, but is it possible in 2.8??
If not, is there some way I can modify (improve?) the source to enable handling of tons of metaballs? I'd be happy to try/contribute although I"m not a cpp expert. I'd also like to make a triangle Mball primitive... that shouldn't be very hard?

**System Information** Operating system: win 10 Graphics card: nvidia 1080 **Blender Version** Broken: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: 06312c6d2db8 Worked: (optional) Hi all, I have a complex network of metaballs that I generate using my python script. I would like to (as I do in 2.79) set the UPDATE property to 'NEVER' while I'm generating them; vastly improving speed. This works in 2.79b: ``` bpy.ops.object.metaball_add(type = 'CAPSULE',rotation = (0,-pi/2,0)) medge = bpy.context.object medge.data.update_method = 'NEVER' ``` BUT, it doesn't work in 2.8 or 2.81. The metaballs seem to be 'stuck' on ALWAYS. I tried just making a couple generic metaballs and setting to NEVER using the gui, but they still appear!!! Am i missing something or is there a problem with the NEVER setting in 2.8 ? Thanks for any suggestions or info. This is kind of mission critical. Also, I would like to be able to generate 20k or even 100k metaballs. This was not possible in 2.79, but is it possible in 2.8?? If not, is there some way I can modify (improve?) the source to enable handling of tons of metaballs? I'd be happy to try/contribute although I"m not a cpp expert. I'd also like to make a triangle Mball primitive... that shouldn't be very hard?
Author

Added subscriber: @Abemis

Added subscriber: @Abemis
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-08-20 12:46:56 +02:00
Member

Can confirm the issue about Never still updating.
Also Fast will not recover polygonization after editing is confirmed...

Will have a look.

Can confirm the issue about `Never` still updating. Also `Fast` will not recover polygonization after editing is confirmed... Will have a look.
Author

Thank you for the info about 'FAST'. That explains another problem I've been having.

Thank you for the info about 'FAST'. That explains another problem I've been having.
Author

Hi,
Is there and ETA for this bug going to be fixed? It seems like a pretty serious bug, and all my work is complete stop until this is fixed. For now I've had to revert all my code back to 2.79.

Thanks for any info.
Todd

Hi, Is there and ETA for this bug going to be fixed? It seems like a pretty serious bug, and **all my work is complete stop** until this is fixed. For now I've had to revert all my code back to 2.79. Thanks for any info. Todd
Member

FAST is back (probably due to some - unrelated - change in transform code), so that should help a little, looking into NEVER...

FAST is back (probably due to some - unrelated - change in transform code), so that should help a little, looking into NEVER...

This issue was referenced by 1bafa3139c

This issue was referenced by 1bafa3139c361a5ea9df44a260b3f9f492d61812
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks!
I noticed that this task is now 'closed', but the original issue with 'never' is still not working and using 'fast' makes little difference.

Should I open another task?
I am happy to try and help out; I have the code running in both Eclipse and VScode and can do non-dangerous things.
Really need that 'never' to be working.
Full stop on our development here, can't proceed.

Thanks! I noticed that this task is now 'closed', but the original issue with 'never' is still not working and using 'fast' makes little difference. Should I open another task? I am happy to try and help out; I have the code running in both Eclipse and VScode and can do non-dangerous things. Really need that 'never' to be working. Full stop on our development here, can't proceed.
Author

EDIT: I may have made an error in last post. 'Never' seems to be working but not all the time. I can't figure it out, will keep testing.
Thank you.

EDIT: I may have made an error in last post. 'Never' seems to be working but not all the time. I can't figure it out, will keep testing. Thank you.
Member

Hi @Abemis : both Never and Fast seems to be working fine here.

If you can provide an example .blend where this fails, I think it is indeed better to open a new report for this [as the original issue has been solved], thx for this.

Hi @Abemis : both `Never` and `Fast` seems to be working fine here. If you can provide an example .blend where this fails, I think it is indeed better to open a new report for this [as the original issue has been solved], thx for this.
Author

Thank you again. I've tested and Never is working now. It's very weird if I add a scene (via python) everything speeds up again, then somehow 'always' turns itself back on and it gets super slow again... well that's just FYI in case anyone has similar issue.

When I test some more I'll open a new report with better/proper description.

Thank you again. I've tested and Never is working now. It's very weird if I add a scene (via python) everything speeds up again, then somehow 'always' turns itself back on and it gets super slow again... well that's just FYI in case anyone has similar issue. When I test some more I'll open a new report with better/proper description.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68840
No description provided.